--- a/_config.yml
+++ b/_config.yml
@@ -50,11 +50,11 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
 # email: "zodeshreya@gmail.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
+# rss: true  # remove this line if you don't want to show an RSS link at the bottom
   github: shreyzo
 #  medium: yourname
 #  reddit: yourname
-   linkedin: shreya-zode-a42561159
+  linkedin: shreya-zode-a42561159
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -71,7 +71,7 @@ social-network-links:
 #  google-scholar: your google scholar
 #  discord: invite/invite_code or users/userid 
 #  kaggle: yourname
- hackerrank: zodeshreya
+  hackerrank: zodeshreya
 
 # If you want your website to generate an RSS feed, provide a description
 # The URL for the feed will be https://<your_website>/feed.xml
