--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Shreya Zode
 ###############################################
 
 navbar-links:
-  About Me: "home"
+  About Me: "_layouts/home"
   Projects: "projects"
   Resume/CV: "http://shreyzo.github.io/resume.pdf"
 # Author's home: "https://deanattali.com"
